Run services in a new AppDomain to eventually allow custom configuration loading.

--- a/src/Muster.Runner/Muster.Runner.csproj
+++ b/src/Muster.Runner/Muster.Runner.csproj
@@ -68,6 +68,7 @@
     <Reference Include="System.ServiceProcess" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ServiceRunner.cs" />
     <Compile Include="WindowsServiceGroup.cs" />
     <Compile Include="Options.cs" />
     <Compile Include="Program.cs" />
