--- a/muster.nuspec
+++ b/muster.nuspec
@@ -10,7 +10,7 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Muster is a .NET (4.0) project aimed at simplifying most aspects of Windows Services: debugging, testing and deploying. It includes a service abstraction layer and a console runner/installer wrapper.</description>
     <summary>Muster is a Windows Service abstraction layer with console runner/installer.</summary>
-    <language>es-US</language>
+    <language>en-US</language>
     <tags>services, windows, console</tags>
   </metadata>
   <files>
