--- a/muster.nuspec
+++ b/muster.nuspec
@@ -14,12 +14,10 @@
     <tags>services, windows, console</tags>
   </metadata>
   <files>
-    <file src="publish-v4.0\bin\Muster.dll" target="bin"/>
-    <file src="publish-v4.0\bin\Muster.pdb" target="bin"/>
-    <file src="publish-v4.0\bin\musterin.exe" target="bin"/>
-    <file src="publish-v4.0\bin\musterin.pdb" target="bin"/>
-    <file src="publish-v4.0\lib\Muster.dll" target="lib"/>
-    <file src="publish-v4.0\lib\Muster.pdb" target="lib"/>
-    <file src="publish-v4.0\lib\Muster.xml" target="lib"/>
+    <file src="publish-v4.0\bin\muster.exe" target="bin"/>
+    <file src="publish-v4.0\bin\muster.pdb" target="bin"/>
+    <file src="publish-v4.0\lib\Muster.dll" target="lib\net40"/>
+    <file src="publish-v4.0\lib\Muster.pdb" target="lib\net40"/>
+    <file src="publish-v4.0\lib\Muster.xml" target="lib\net40"/>
   </files>
 </package>
