--- a/src/Muster.Runner/Muster.Runner.csproj
+++ b/src/Muster.Runner/Muster.Runner.csproj
@@ -9,7 +9,7 @@
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Muster.Runner</RootNamespace>
-    <AssemblyName>musterin</AssemblyName>
+    <AssemblyName>Muster.Runner</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
