--- a/src/Muster.Test/Muster.Test.csproj
+++ b/src/Muster.Test/Muster.Test.csproj
@@ -46,12 +46,14 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Test.config" />
+    <None Include="Test.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>xcopy /Y $(TargetFileName) ..\..\..\Muster.Runner\$(OutDir)$(TargetFileName)
-xcopy /Y ..\..\Test.config ..\..\..\Muster.Runner\$(OutDir)</PostBuildEvent>
+    <PostBuildEvent>xcopy /Y $(TargetFileName) ..\..\..\Muster.Runner\$(OutDir)
+xcopy /Y Test.config ..\..\..\Muster.Runner\$(OutDir)</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
