--- a/muster.nuspec
+++ b/muster.nuspec
@@ -15,10 +15,14 @@
     <tags>services windows console</tags>
   </metadata>
   <files>
-    <file src="publish-v4.0\bin\muster.exe" target="bin"/>
-    <file src="publish-v4.0\bin\muster.pdb" target="bin"/>
-    <file src="publish-v4.0\lib\Muster.dll" target="lib\net40"/>
-    <file src="publish-v4.0\lib\Muster.pdb" target="lib\net40"/>
-    <file src="publish-v4.0\lib\Muster.xml" target="lib\net40"/>
+    <file src="publish-v4.0\bin\*.exe" target="bin"/>
+    <file src="publish-v4.0\bin\*.pdb" target="bin"/>
+    <file src="publish-v4.0\bin\*.dll" target="bin"/>
+
+    <file src="publish-v4.0\lib\*.dll" target="lib\net40"/>
+    <file src="publish-v4.0\lib\*.pdb" target="lib\net40"/>
+    <file src="publish-v4.0\lib\*.xml" target="lib\net40"/>
+
+    <file src="src\**\*.cs" target="src" />
   </files>
 </package>
