--- a/muster.nuspec
+++ b/muster.nuspec
@@ -4,8 +4,8 @@
     <id>muster</id>
     <version>0.5</version>
     <title>Muster</title>
-    <authors>Johnny Gozde</authors>
-    <owners>Johnny Gozde</owners>
+    <authors>John Gozde</authors>
+    <owners>John Gozde</owners>
     <projectUrl>https://github.com/jgoz/muster</projectUrl>
     <licenseUrl>http://www.opensource.org/licenses/mit-license.html</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
